--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
                 </div>
                 <div class="content">
                     <div class="API">
+                        <div class="hungry">
+
+                        </div>
+                        <div class="sad"></div>
                         
                     </div>
-                    <button id= "hugry" >Hungry</button>
-                    <button id= "sad" >Sad</button>
+                    <button id= "btnHun" >Hungry</button>
+                    <button id= "btnSad" >Sad</button>
                 </div>
             </div>
 
