--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="gBackground">
             <div class="pBackground">
                 <div class="header">
-                    <h1>How Are you Feeling Today</h1>
+                    <h1>How Are you Feeling Today?</h1>
                 </div>
                 <div class="content">
                     <div class="API">
                         <div class="hungry">
-
                         </div>
                         <div class="sad"></div>
-                        
                     </div>
-                    <button id= "btnHun" >Hungry</button>
-                    <button id= "btnSad" >Sad</button>
+                    
+                    <button id= "btnHun" ><img src="hungry.jpg"> Hungry</button>
+
+                    <button id= "btnSad" ><img src="sad.png"> Sad</button>
                 </div>
             </div>
 
