--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Project</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="test.js"></script>
+        <script src="script.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
